--- a/#styles.css
+++ b/#styles.css
@@ -1,11 +1,11 @@
 #validation-input {
     border: 3px solid #bdbdbd;
-}
-
-#validation-input.valid {
+  }
+  
+  #validation-input.valid {
     border-color: #4caf50;
-}
-
-#validation-input.invalid {
-    border-color: red;
-}
+  }
+  
+  #validation-input.invalid {
+    border-color: #f44336;
+  }
